--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,78 +1,72 @@
-@import 'config';
+@import "config";
+@import "menu";
 
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 body {
-
-    @include background();
-    background: $primary-color;
-    color: #fff;
-    height: 100%;
-    margin: 0;
-    line-height: 1.5em;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    
+  @include background();
+  background: $primary-color;
+  color: #fff;
+  height: 100%;
+  margin: 0;
+  line-height: 1.5em;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
 // headings
 h1,
 h2,
 h3 {
-   
-    font-weight: 400;
+  font-weight: 400;
 
-    &.lg-heading {
+  &.lg-heading {
+    font-size: 6rem;
+  }
 
-        font-size: 6rem;
-    }
-
-    &.sm-heading {
-        margin-bottom : 2rem;
-        padding: 0.2rem 1rem;
-        background: rgba(lighten($primary-color,2),0.5);
-    }
+  &.sm-heading {
+    margin-bottom: 2rem;
+    padding: 0.2rem 1rem;
+    background: rgba(lighten($primary-color, 2), 0.5);
+  }
 }
 
-
 a {
-    color: #fff;
-    text-decoration: none;
+  color: #fff;
+  text-decoration: none;
 }
 
 header {
-    position: fixed;
-    z-index: 2;
-    width: 100%;
+  position: fixed;
+  z-index: 2;
+  width: 100%;
 }
 
 .text-secondary {
-    color: $secondary-color;
+  color: $secondary-color;
 }
 
 main {
-    padding: 4rem;
-    height: 100%;
+  padding: 4rem;
+  height: 100%;
 
-    .icons {
-        margin-top: 1rem;
+  .icons {
+    margin-top: 1rem;
 
-        a {
-            padding: 0.4 rem;
+    a {
+      padding: 0.4 rem;
 
-            &:hover {
-                color: $secondary-color;
-                @include easeOut();
-                
-            }
-        }
+      &:hover {
+        color: $secondary-color;
+        @include easeOut();
+      }
     }
+  }
 
-    &#home{
-        overflow: hidden;
-        h1{
-            margin-top: 20vh;
-        }
+  &#home {
+    overflow: hidden;
+    h1 {
+      margin-top: 20vh;
     }
+  }
 }
-
